--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
 <body>
   <h1>Header</h1>
+  <h2>Header2</h2>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae esse commodi rem modi illo, odit quod
+    laudantium ipsa aliquid nihil ullam unde. Consequatur tempora illum praesentium voluptate quaerat temporibus fugiat.
+  </p>
 </body>
 
 </html>
