--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae esse commodi rem modi illo, odit quod
     laudantium ipsa aliquid nihil ullam unde. Consequatur tempora illum praesentium voluptate quaerat temporibus fugiat.
   </p>
+  <footer>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, atque!</footer>
 </body>
 
 </html>
